tests/sksl/errors/golden/StaticIfTest.glsl
### Compilation failed:

error: 4: static if has non-static test
1 error
